# KvStore

./: .gitignore  Cargo.toml  readme.md  storage.txt
benches/: benches.rs
src/: client.rs  engine.rs  kvstore.rs  lib.rs  server.rs  sled.rs  thread_pool.rs
src/engine/: mod.rs  sled_store.rs
src/engine/kvstore/: file_operators.rs  kvstore.rs  mod.rs
src/thread_pool/: mod.rs  naive_pool.rs  rayon_pool.rs  shared_pool.rs
tests/: cli.rs  kv_store.rs  tests.rs  thread_pool.rs
