[package]
name = "kvs"
version = "0.1.0"
authors = ["LebranceBW <LebranceBW@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.8"
tempfile = "3.2.0"
walkdir = "2.3.2"

[lib]
test = false

[dependencies]
anyhow = "1.0.40"
serde = "1.0.126"
serde_json = "1.0.64"
structopt = "0.3.21"

