[package]
name = "kvs"
version = "0.1.0"
authors = ["LebranceBW <LebranceBW@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "0.11.0"
bencher = "0.1.5"
lazy_static = "1.4.0"
mockall = "0.9.1"
predicates = "1.0.8"
rand = "0.8.3"
tempfile = "3.2.0"
walkdir = "2.3.2"

[lib]
test = false

[dependencies]
anyhow = "1.0.40"
log = "0.4.14"
mockall = "0.9.1"
serde = "1.0.126"
serde_json = "1.0.64"
simple_logger = "1.11.0"
sled = "0.34.6"
structopt = "0.3.21"

[[bench]]
name = "benches"
harness = false
